--- a/ariExpressDjango/templates/base.html
+++ b/ariExpressDjango/templates/base.html
@@ -13,9 +13,21 @@
     <title>AriExpress - Home</title>
     {% block head %}{% endblock %}
 
-</head>
-<head>
-<title>AriExpress - Home</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .content {
+            flex: 1;
+        }
+
+        .footer {
+            flex-shrink: 0;
+        }
+    </style>
 </head>
 <body>
     {% include 'header.html' %}
@@ -35,9 +47,13 @@
         {% endfor %}
     {% endif %}
 
-    {% block content %}{% endblock %}
+    <div class="content">
+        {% block content %}{% endblock %}
+    </div>
 
     <br><br>
-    FOOTER
+    <footer class="footer">
+        {% include 'footer.html' %}
+    </footer>
 </body>
 </html>
