admin page almost done (need to finish store transactions)

--- a/ariExpressDjango/mainApp/templates/adminPage.html
+++ b/ariExpressDjango/mainApp/templates/adminPage.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<head>
+  <title>{{ storename }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous"></script>
+
+</head>
 <style>
   h1 {
     position: absolute;
@@ -15,42 +26,123 @@
 <body>
   <h1>Admin Area</h1>
   <br><br><br>
-  <form method="post" action="{% url 'mainApp:adminPage' %}">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary" name="onlineUsers">View Online Users</button>
-  </form>
+
+
   <br>
+  
   <form method="post" action="{% url 'mainApp:adminPage' %}">
     {% csrf_token %}
-    <button type="submit" class="btn btn-primary" name="transactionHistory" data-toggle="modal">View Transaction History</button>
+    <select class="form-select" aria-label="Default select example" name="userStoreSelect" id="userStoreSelect" onchange="updateSelect()">
+      <option selected>User or Store:</option>
+      <option value="1">User</option>
+      <option value="2">Store</option>
+    </select>
+    <select class="form-select" aria-label="Default select example" name="selectStore" id="selectStore" style="display: none;">
+      <option selected>Select Store:</option>
+      {% for store in allstores %}
+      <option value="{{store.store_name}}">{{store.store_name}}</option>
+      {% endfor %}
+    </select>
+    <select class="form-select" aria-label="Default select example" name="selectUser" id="selectUser" style="display: none;">
+      <option selected>Select User:</option>
+      {% for key, user in allusers.items %}
+      <option value="{{user.username}}">{{user.username}}</option>
+      {% endfor %}
+    </select>
+  
+    <button type="submit" class="btn btn-primary" name="transactionHistory">View Transaction History</button>
   </form>
-  {{ allusers }}
-  {% if allusers %}
+  <button type="submit" class="btn btn-primary" name="onlineUsers" onclick="showOnlineUsers()">View Online Users</button>
+
+  <script>
+    function updateSelect() {
+      const selectElement = document.getElementById('userStoreSelect');
+      const selectedValue = selectElement.value;
+
+      const storeSelect = document.getElementById('selectStore');
+      const userSelect = document.getElementById('selectUser');
+      if(selectedValue == "1"){
+        storeSelect.style.display = 'none';
+        userSelect.style.display = 'block';
+      } else {
+      storeSelect.style.display = 'block';
+      userSelect.style.display = 'none';
+      }
+    }
+    function showOnlineUsers() {
+      const usersDiv = document.getElementById('users');
+      const transDiv = document.getElementById('transactions');
+      const historyDiv = document.getElementById('history');
+      usersDiv.style.display = 'block';
+      transDiv.style.display = 'none';
+      historyDiv.style.display = 'none';
+    }
+    function showTransactions() {
+      const usersDiv = document.getElementById('users');
+      const transDiv = document.getElementById('transactions');
+      usersDiv.style.display = 'none';
+      transDiv.style.display = 'block';
+    }
+    // const adminForm = document.getElementById('adminForm');
+    // const actionUrl = "{% url 'mainApp:adminPage' %}?userStoreSelect=" + selectedValue;
+    // adminForm.action = actionUrl;
+  </script>
+  
+  
+  <div id="history">
+    {% if historyInfo %}
+    <div class="row justify-content-lg-center">
+      <div class="col-lg-9">
+          <ul>
+              {% for id, purchase in historyInfo.items %}
+              <li style=" list-style-type: none;">
+                  <h2 ><i class="fa-solid fa-bag-shopping"></i> Purchase {{ purchase.transaction_id }} (placed at {{ purchase.date }})</h2>
+                  {% for storename, products in purchase.products.items %}
+                  <h3 ><i class="fa-solid fa-store"></i> {{ storename }}</h3>
+                  <table class="table table-hover">
+                    <thead>
+                      <tr class="table-primary">
+                          <th style="width: 30%;">Name</th>
+                          <th style="width: 20%;">Quantity</th>
+                          <th style="width: 20%;">Price</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        {% for product in products %}
+                      <tr>
+                          <td>{{ product.1 }}</td>
+                          <td>{{ product.2 }}</td>
+                          <td>{{ product.3 }}</td>
+                      </tr> 
+                        {% endfor %}  
+                    </tbody>
+                  </table>
+                  {% endfor %}
+                  <p style=" font-size:120%; color:#FF9800">
+                    <b>Total Price: {{ purchase.overall_price }}</b>
+                  </p> 
+              </li>
+              <br><br>
+              {% empty %}
+              <li>No baskets available.</li>
+              {% endfor %}
+          </ul>
+        </div>
+      </div>
+      </button>
+    {% else %}
+        <p style="text-align:center; font-size:150%;">you have no purchase history</p>
+    {% endif %}
+      </div> 
+  <div id="users" style="display: none;">
+  {% if onlinemembers or offlinemembers %}
     <br><br>
     <h2>Online Users</h2>
     <ul>
-      {% for user in allusers.online %}
-      <div class="container">
-        <div class="modal fade" id="myModal{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel{{ forloop.counter }}">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="myModalLabel{{ forloop.counter }}">User Information</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p>{{ user }}</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a data-toggle="modal" data-target="#myModal{{ forloop.counter }}"><li>{{ user }}</li></a>
+      {% for user in onlinemembers %}
+      
+      <p>{{ user }}</p>
+              
       {% empty %}
       <li>No online users.</li>
       {% endfor %}
@@ -58,33 +150,32 @@
 
     <h2>Offline Users</h2>
     <ul>
-      {% for user in allusers.offline %}
-      <div class="container">
-        <div class="modal fade" id="myModal{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel{{ forloop.counter }}">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="myModalLabel{{ forloop.counter }}">User Information</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p>{{ user }}</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a data-toggle="modal" data-target="#myModal{{ forloop.counter }}"><li>{{ user }}</li></a>
+      {% for user in offlinemembers %}
+      
+      <li>{{ user }}</li>
+              
       {% empty %}
       <li>No offline users.</li>
       {% endfor %}
     </ul>
   {% endif %}
+</div>  
+<div id="transactions" style="display: none;">
+  {% if transactions %}
+    <br><br>
+    <h2>Transactions</h2>
+    <ul>
+      {% for transaction in transactions %}
+      
+      <p>{{ transaction }}</p>
+              
+      {% empty %}
+      <li>No Transactions found.</li>
+      {% endfor %}
+    </ul>
+
+  {% endif %}
+  </div>
 </body>
 
 {% endblock %}
