--- a/ariExpressDjango/mainApp/templates/viewDiscounts.html
+++ b/ariExpressDjango/mainApp/templates/viewDiscounts.html
@@ -23,6 +23,8 @@
         <input type="hidden" name="discount_id" value="{{ key }}">
         <button type="submit" class="btn btn-outline-dark" name="removeDiscount">Remove</button>
       </form>
+    {% empty %}
+    <h3>No discounts in this store.</h3>
     {% endfor %}
 </body>
 {% endblock %}
